--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,15 +1,29 @@
 cf:
   title: <%= Faker::Name.name %>
   body: Means striving for excellence
-  author: one
+  author: author
+  published: true
 
 cz:
   title: <%= Faker::Name.name %>
   body: It's not a toy anymore
-  author: one
+  author: author
+  published: true
 
 cr:
   title: Code Rails
   body: This is how I learned web development
-  author: one
+  author: author
+  published: true
 
+unpublished:
+  title: this is a unpublished draft
+  body: this is an unpublished draft post body
+  author: author
+  published: false
+
+published:
+  title: this is post that has been published
+  body: this is a post that has been published body
+  author: author
+  published: true
